src/pages/problem/ProblemPage.module.less
.languageSelectIcon {
  margin-left: 10px;
  font-size: 17px;
  vertical-align: bottom;
}

.headerContainer {
  margin-top: 10px;
  margin-bottom: 37px;

  :global(.ui.label) {
    margin: 2px !important;
  }
}

.headerRightStatisticGroup {
  padding-top: 15px;
  flex-wrap: nowrap !important;
  margin-left: auto !important;
  margin-right: auto !important;
  width: min-content;

  > :first-child {
    margin-left: 0 !important;
  }
}

.labels {
  margin-top: -2px;
  white-space: nowrap; // FIXME
}

.toggleTagsLabel {
  user-select: none;

  :global(.icon) {
    cursor: pointer;
    margin-right: 0 !important;
    margin-left: .5em !important;
    font-size: .92857143em !important;
    transition: transform .3s ease;
  }
}

.divider {
  margin: 37.5px -233333px !important;
}

.leftContainer, .rightContainer {
  display: inline-block;
  vertical-align: top;
}

.leftContainer {
  padding-right: 1rem;
}

.rightContainer {
  padding-left: 1rem;
  position: sticky !important;
  top: -152px;
}

.actionMenusWrapper {
  margin-top: 85px !important;
}

.secondActionMenu {
  margin-top: 40px !important;
}

.actionMenu {
  min-height: 0 !important;

  border-right: none !important;
  border-left-width: 2px !important;
  border-left-style: solid !important;
  border-left-color: rgba(34, 36, 38, 0.15) !important;

  :global(.item) {
    border-right: none !important;
    border-left-style: solid !important;
    border-left-color: transparent !important;
    margin: 0 0 0 -2px !important;
    border-left-width: 2px !important;
    
    &.menuItemImportant {
      background: #2185d0 !important;
      color: #fff !important;
      border-left-color: rgba(255, 255, 255, 0.6) !important;

      &:hover {
        background: #1678c2 !important;
        color: #fff !important;
        border-left-color: rgba(255, 255, 255, 0.45) !important;
      }
    }

    &.menuItemDangerous {
      color: #db2828 !important;
      border-left-color: rgba(219, 40, 40, 0.5) !important;

      &:hover {
        background: rgba(219, 40, 40, 0.03) !important;
        color: #db2828 !important;
        border-left-color: #db2828 !important
      }
    }

    &:hover {
      color: rgba(0, 0, 0, 0.95) !important;
      border-color: rgba(0, 0, 0, 0.95) !important;
      background-color: rgba(0, 0, 0, 0.03) !important;
    }

    :global(.icon) {
      float: none !important;
      margin: 0 1em 0 0 !important;
    }
  }
}

.sampleDataPre {
  margin-top: 0;
  margin-bottom: 0;
}

.copySample {
  display: block;
  float: right;
  user-select: none;
}

.sampleExplanation {
  padding-top: 0 !important;
  padding-bottom: 0 !important;

  :global(p) {
    margin-bottom: 1em !important;
  }
}

// responsive

@actionMenuWidth: 260px;
@rightContainerWidth: calc(@actionMenuWidth + 1rem);

.leftContainer {
  width: calc(100% - @rightContainerWidth);
}

.rightContainer {
  width: @rightContainerWidth;
}

.actionMenu {
  width: @actionMenuWidth !important;
}

@media only screen and (max-width: 1023px) and (min-width: 768px) {
  @actionMenuWidth: 180px;
  @rightContainerWidth: calc(@actionMenuWidth + 1rem);

  .leftContainer {
    width: calc(100% - @rightContainerWidth);
  }
  
  .rightContainer {
    width: @rightContainerWidth;
  }
  
  .actionMenu {
    width: @actionMenuWidth !important;
  }

  .headerRightStatisticGroup > :global(.ui.statistic) {
    &:first-child {
      margin-right: 1em !important;
    }

    &:not(:first-child) {
      margin-left: 1em !important;
    }
  }
}

@media only screen and (max-width: 767px) {
  .headerContainer {
    margin-top: 12px;
    margin-bottom: 25px;
  }
  
  .labels {
    white-space: initial;
  }

  .divider {
    margin-top: 9px !important;
    margin-bottom: 25px !important;
  }

  .leftContainer {
    width: 100%;
    padding-right: 0;
  }

  .columnSampleInput {
    padding-right: 0.5rem !important;
  }

  .columnSampleOutput {
    padding-left: 0.5rem !important;
  }

  .rightContainer {
    padding-left: 0;
    position: static !important;
    width: 100%;
  }

  .actionMenusWrapper {
    margin-top: 20px !important;
  }

  .secondActionMenu {
    margin-top: 30px !important;
  }

  .actionMenu {
    width: 100% !important;
  }

  .dividerBottom {
    margin-top: 25px !important;
  }

  .headerRightStatisticGroup {
    padding-top: 4px;
    margin: 0 auto !important;
  }
}

